Add java opts guide